--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         Tutoriels
       </a>
     </div>
-    <a href="#home"><button class="ui icon button" style="margin-top: 600px; margin-left: 40%">
+    <a href="#home" style="display: flex; justify-content: center; align-items: flex-end;"><button class="ui icon button">
       <i class="arrow up icon"></i>
     </button><a/>
   </div>
